--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   </button>
 
   <script src="scripts/day2.js"></script>
-  <button onclick="console.log(calcScore(strategyGuide))">
+  <button onclick="console.log(calcScoreV1(strategyGuide))">
+    Day 2.1
+  </button>
+  <button onclick="console.log(calcScoreV2(strategyGuide))">
     Day 2.1
   </button>
 
