--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     Day 2.1
   </button>
 
+  <script src="scripts/day3.js"></script>
+  <button onclick="console.log(rucksackReorganization(rucksackContents))">
+    Day 3.1
+  </button>
+  <button onclick="console.log(badgeAssignment(rucksackContents, 3))">
+    Day 3.2
+  </button>
+
 </body>
 
 </html>
