--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
     Day 3.2
   </button>
 
+  <script src="scripts/day4.js"></script>
+  <button onclick="console.log(day4(day4_input))">
+    Day 4.1
+  </button>
+  <button onclick="console.log(findOverlap(day4_input))">
+    Day 4.2
+  </button>
+
 </body>
 
 </html>
